# Waystart

./: Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
.github/workflows/: rust.yaml
src/: cli.rs  config.rs  dapps.rs  desktop_entry.rs  main.rs
src/components/: desktop_entry.rs  mod.rs  power_options.rs  waystart.rs
src/components/ui/: dropdown.rs  input.rs  mod.rs  palette.rs  separator.rs  shortcut.rs
src/entries/: application.rs  desktop_entry.rs  favorites.rs  frequency.rs  mod.rs
src/finder/: favorites.rs  mod.rs
src/finder/desktop/: entry.rs  frequency.rs  mod.rs  terminal.rs
src/finder/math/: entry.rs  mod.rs
src/finder/wifi/: entry.rs  mod.rs  nm.rs
src/ipc/: client.rs  mod.rs  server.rs
src/quick_access/: mod.rs  power.rs  wifi.rs
src/ui/: actions.rs  desktop_entry.rs  mod.rs  palette.rs  power_options.rs  waystart.rs
src/ui/elements/: dropdown.rs  entry_button.rs  icon.rs  input.rs  mod.rs  power_options.rs  separator.rs  shortcut.rs
src/ui/pages/: home.rs  mod.rs  search.rs
