[package]
name = "waystart"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
evalexpr = "13.1.0"
freedesktop-desktop-entry = { version = "0.7.13", default-features = false }
freedesktop-icons = "0.4.0"
gpui = { git = "https://github.com/zed-industries/zed", default-features = false, features = ["wayland"] }
nucleo-matcher = "0.3.1"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
smol = "2.0.2"
toml = { version = "0.9.5", features = ["serde"] }
unicode-segmentation = "1.12.0"
xflags = "0.3.2"

[profile.release]
codegen-units = 1
lto = "thin"
